SFUSA/force-app/main/default/objects/Time_Interval__c/fields/Max_Number_of_Groups__c.field-meta.xml
<CustomField>
        <fullName>Max_Number_of_Groups__c</fullName>
        <description>The number of groups that are allowed on a Single Barrel Program Trip and Tour</description>
        <label>Max Number of Groups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>