SFUSA/force-app/main/default/objects/Time_Interval__c/fields/Trip_Group__c.field-meta.xml
<CustomField>
        <fullName>Trip_Group__c</fullName>
        <description>This filed is used for capturing trip group information.</description>
        <label>Trip Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>