SFUSA/force-app/main/default/objects/Time_Interval__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>Brand__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Submitter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>