SFUSA/force-app/main/default/objects/Time_Interval__c/listViews/All1.listView-meta.xml
<ListView>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>